[package]
name = "minesweeper6d"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = "0.24"
hhmmss = "0.1"
itertools = "0.11"
rand = "0.8"
rand_chacha = "0.3"
toml = "0.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.84"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
