[package]
name = "minesweeper6d"
version = "0.1.3"
edition = "2021"

[dependencies]
eframe = "0.26"
hhmmss = "0.1"
itertools = "0.11"
rand = "0.8"
rand_chacha = "0.3"
toml = "0.8"
log = "0.4"
web-time = "0.2"

# uses defective version otherwise
ahash = "0.8.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
