[package]
name = "minesweeper6d"
version = "0.1.3"
edition = "2021"

# shared dependencies for all versions:
[dependencies]
eframe = "0.26"
itertools = "0.11"
rand = "0.8"
rand_chacha = "0.3"
toml = "0.8"
log = "0.4"
web-time = "0.2"

# web specific dependencies:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
